working on chat module
